# pyrecall

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
docs/: BRIDGE.md  DEMO.md  LAUNCH.md  PUBLISH.md  SPONSORS.md
examples/: bridge.client.json  bridge.mcp.json  bridge.windows.json  config.json  demo.ps1  demo.sh
src/pyrecall/: __init__.py  __main__.py  bridge.py  cli.py  diff_learn.py  doctor.py  harvest.py  host_setup.py  indexer.py  learner.py  models.py  packs.py  paths.py  playbook.py  python_rules.py  retriever.py  store.py  summarize.py  textutil.py  watch.py  workflow.py
tests/: test_pyrecall.py
