[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-recall"
version = "0.1.0"
description = "Local project memory and correction learning for Python workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "PyRecall Contributors" }]
keywords = [
  "python",
  "memory",
  "cli",
  "knowledge",
  "pytest",
  "pathlib",
  "project-memory",
  "developer-tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "build>=1.2.0",
  "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/mjpt1/pyrecall"
Repository = "https://github.com/mjpt1/pyrecall"
Issues = "https://github.com/mjpt1/pyrecall/issues"
Changelog = "https://github.com/mjpt1/pyrecall/releases"

[project.scripts]
pyrecall = "pyrecall.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/pyrecall"]

[tool.hatch.build.targets.sdist]
include = [
  "/src/pyrecall",
  "/tests",
  "/examples",
  "/docs",
  "/README.md",
  "/LICENSE",
  "/pyproject.toml",
  "/CONTRIBUTING.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
